--- a/content/1.get-infected/default.yml
+++ b/content/1.get-infected/default.yml
@@ -1,5 +1,5 @@
 title: Get Infected!
 content: |
   <div class="jumbotron"><h1>Android</h1>
-    Contact OATSEA to join the alpha testing team!
+    <a href="http://oatsea.org/contact/">Contact OATSEA</a> to join the alpha testing team!
   </div>
