--- a/content/1.get-infected/default.yml
+++ b/content/1.get-infected/default.yml
@@ -1,6 +1,6 @@
 title: Get Infected!
 content: |
-  <div class="jumbotron"><h1>Android</h1>
+  <div class="well">
     <a href="http://oatsea.org/contact/">Contact OATSEA</a> to join the alpha testing team!
   </div>
   
