--- a/content/1.get-infected/default.yml
+++ b/content/1.get-infected/default.yml
@@ -5,10 +5,15 @@ content: |
   </div>
   
     <div class="jumbotron"><h1>Android</h1>
-  <p><b>Step 1:</b> Download & Install Webserver - <a href="/infect/DroidPHP.apk" >DropidPHP APK</a></p>
-  <p><b>Step 1.5:</b>Download and unzip <a href="/infect/getinfected.php.zip">getinfected</a> and place in htdocs</p> 
-  <p><b>Step 2:</b> Download & Install Teacher Virus - <a href="/infect/teachervirus.apk">Teacher Virus APK</a></p>
-  <p><b>Step 3:</b> Start the DroidPHP webserver and the Open Teacher Virus App and click on getinfected.php</p>
+  <p><b>Step 1:</b> Download & Install Webserver - <a href="/infect/DroidPHP.apk" >DropidPHP</a></p>
+  <p><a class="btn lrg btn-success" href="/infect/DroidPHP.apk" >Get DropidPHP</a></p>
+  
+  <p><b>Step 2:</b>Download and unzip <a href="/infect/getinfected.php.zip">getinfected</a> and place in htdocs</p> 
+  <p><a class="btn lrg btn-success" href="/infect/getinfected.php.zip">Download getinfected.php</a></p>
+  
+  <p><b>Step 3:</b> Download & Install Teacher Virus - <a href="/infect/teachervirus.apk">Teacher Virus APK</a></p>
+  <p><a class="btn lrg btn-success" href="/infect/teachervirus.apk">Get Android Teacher Virus</a></p>
+  <p><b>Step 4:</b> Start the DroidPHP webserver and the Android Open Teacher Virus App</p>
   </div>
   
   ##Other Devices?
