--- a/content/5.contact/default.yml
+++ b/content/5.contact/default.yml
@@ -3,5 +3,5 @@ title: Contact
 content: |
   Contact the creators of Teacher Virus via the OATSEA Foundation
   
-  <p> <a class="btn btn-primary" href="http://www.oatsea.org" role="button" target="_blank">Contact OATSEA Foundation »</a></p>
+  <p> <a class="btn btn-primary" href="http://www.oatsea.org/forms/contact-us.html" role="button" target="_blank">Contact OATSEA Foundation »</a></p>
   
