--- a/content/1.get-infected/default.yml
+++ b/content/1.get-infected/default.yml
@@ -4,7 +4,7 @@ content: |
     <h1>Join the Alpha</h1>
     <p>We're looking for people to play with us who are passionate about the power of education to change the world and want to get involved in solving some of humanities' greatest challenges through (self) education.</p>
     <p>If you'd like to <b>participate in the Alpha</b> as either a student, tester, developer or teacher (or something else) please contact us and register at OATSEA:</p>
-    <p><a class="btn lrg btn-default" href="http://oatsea.org/contact/">Contact us </a></p>
+    <p><a class="btn lrg btn-default" href="http://teachervirus.org/register">Register! </a></p>
     <h3>... Or you can just get infected by following the instructions below </h3>
   </div>
   
