--- a/content/3.contribute/default.yml
+++ b/content/3.contribute/default.yml
@@ -5,7 +5,7 @@ content: |
       <p class="lead"><b>We need you!</b></p>
       <p>Help us make Teacher Virus the best source of free education on the planet that's developed in a sustainable way.<p>
       <p> Whatever your path - take the first step in participation by registering for the Alpha:</p>
-      <a class="btn btn-success" href="http://www.oatsea.org/forms/contact-us.html" role="button">Contact Us »</a>
+      <a class="btn btn-success" href="http://www.teachervirus.org/register" role="button">Contact Us »</a>
     </div>
     
     #Once Registered . .
@@ -15,7 +15,7 @@ content: |
 
     Install Teacher Virus on the device of your choice (mainly Android at this point) and give it a go.  
 
-    <a class="btn btn-success" href="/?/get-infected/" role="button">Get Infected »</a>
+    <a class="btn btn-success" href="?/get-infected/" role="button">Get Infected »</a>
     
     Once infected, join the conversation in the Teacher Virus forum and tell us what you want from the platform and provide feedback to the various payload developers so that we can quickly iterate our work.
     
@@ -43,11 +43,11 @@ content: |
     
     For further information on how to Mutate Teacher Virus have a look here:
     
-    <p> <a class="btn btn-success" href="/?/contribute/mutate/" role="button">Mutating Teacher Virus »</a></p>  
+    <p> <a class="btn btn-success" href="?/contribute/mutate/" role="button">Mutating Teacher Virus »</a></p>  
     
     ##Breed It!
     
     If you are a developer we'd love your help in developing the underlying Teacher Virus platform - Help us breed the virus that provides the best free education on the planet!
     
-    <a class="btn btn-success" href="http://www.oatsea.org/forms/contact-us.html" role="button">Contact Us »</a>
+    <a class="btn btn-success" href="http://www.teachervirus.org/contact" role="button">Contact Us »</a>
   
