--- a/content/5.contact/default.yml
+++ b/content/5.contact/default.yml
@@ -1,7 +1,7 @@
 bypass_cache: true
 title: Contact
 content: |
-  Contact the creators of Teacher Virus via the OATSEA Foundation
+  Contact the creators of Teacher Virus online:
   
-  <p> <a class="btn btn-primary" href="http://www.oatsea.org/forms/contact-us.html" role="button" target="_blank">Contact OATSEA Foundation »</a></p>
+  <p> <a class="btn btn-primary" href="http://www.teacherviurs.org/contact" role="button" target="_blank">Contact Us Online »</a></p>
   
