--- a/content/3.contribute/default.yml
+++ b/content/3.contribute/default.yml
@@ -5,7 +5,7 @@ content: |
       <p class="lead"><b>We need you!</b></p>
       <p>Help us make Teacher Virus the best source of free education on the planet that's developed in a sustainable way.<p>
       <p> Whatever your path - take the first step in participation by registering for the Alpha:</p>
-      <a class="btn btn-success" href="http://www.teachervirus.org/register" role="button">Contact Us »</a>
+      <a class="btn btn-success" href="http://www.teachervirus.org/register" role="button">Register! »</a>
     </div>
     
     #Once Registered . .
