--- a/content/5.contact/default.yml
+++ b/content/5.contact/default.yml
@@ -3,5 +3,5 @@ title: Contact
 content: |
   Contact the creators of Teacher Virus online:
   
-  <p> <a class="btn btn-primary" href="http://www.teacherviurs.org/contact" role="button" target="_blank">Contact Us Online »</a></p>
+  <p> <a class="btn btn-primary" href="http://www.teachervirus.org/contact" role="button" target="_blank">Contact Us Online »</a></p>
   
